[gd_scene load_steps=4 format=3 uid="uid://cuqbwmgdnlkib"]

[ext_resource type="Texture2D" uid="uid://dveeswqio62ao" path="res://sprite/buttonstyle.png" id="1"]
[ext_resource type="Script" path="res://scripts/ButtonNext.gd" id="1_3a75c"]
[ext_resource type="FontFile" uid="uid://s6087bmqv6uy" path="res://fonts/Terminal-Grotesque-master/title.otf" id="2_3d31c"]

[node name="ButtonNext" type="Node2D"]
position = Vector2(511, 371)
scale = Vector2(0.4, 0.4)
script = ExtResource("1_3a75c")

[node name="ButtonSprite" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="Buttonnext" type="Label" parent="ButtonSprite"]
offset_left = -190.0
offset_top = -40.0
offset_right = 195.0
offset_bottom = 40.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_3d31c")
theme_override_font_sizes/font_size = 54
text = "weiter"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="ButtonSprite/Buttonnext" to="." method="_on_buttonnext_gui_input"]
[connection signal="mouse_entered" from="ButtonSprite/Buttonnext" to="." method="_on_buttonnext_mouse_entered"]
[connection signal="mouse_exited" from="ButtonSprite/Buttonnext" to="." method="_on_buttonnext_mouse_exited"]
